# AI-Chef

./: .gitignore  README.md  langgragh.json  pyproject.toml
app/: main.py
app/agents/: ai_chef.py
app/api/v1/: chat.py  oss.py
app/common/: logger.py
app/models/: schemas.py
app/static/: index.html
