[project]
name = "ai-chef"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-oss-v2>=1.2.5",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
]
